--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --coverage"
+    "test": "jest --detectOpenHandles --coverage"
   },
   "keywords": [],
   "author": "",
