--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -2,6 +2,6 @@ services:
   web:
     build:
       context: app
-      # dockerfile: Dockerfile
+      dockerfile: ./Dockerfile
     ports:
       - "5000:5000"
