--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
+RUN ls -al
+
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --omit=dev
