Modified: move app.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app/app.js",
+    "start": "node app.js",
     "test": "jest --detectOpenHandles --coverage"
   },
   "keywords": [],
