--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -1,7 +1,7 @@
 services:
   web:
     build:
-      context: app
+      context: .
       # dockerfile: ./Dockerfile
     ports:
       - "5000:5000"
