--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "optionalDependencies": {
-    "fsevents": false
-  }
+  "description": ""
 }
